--- a/src/components/layout.templ
+++ b/src/components/layout.templ
@@ -4,7 +4,7 @@ templ Layout() {
 	<html>
 		<head>
 			<title>Stake</title>
-			<link rel="stylesheet" href="/public/assets/app.css"/>
+			<link rel="stylesheet" href="/public/assets/generated/app.css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10"></script>
 		</head>
 		<body>
