feat: add bundler for typescript code

--- a/src/components/layout.templ
+++ b/src/components/layout.templ
@@ -4,8 +4,9 @@ templ Layout() {
 	<html>
 		<head>
 			<title>Stake</title>
-			<link rel="stylesheet" href="/public/assets/generated/app.css"/>
+			<link rel="stylesheet" href="/public/assets/css/app.css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10"></script>
+			<script src="/public/assets/js/index.js"></script>
 		</head>
 		<body>
 			<main class="flex flex-col w-screen h-screen">
