--- a/src/components/body.templ
+++ b/src/components/body.templ
@@ -5,7 +5,7 @@ templ Body() {
 		<div class="flex flex-col h-full w-full bg-red-50">
 			<div class="mx-auto my-auto">
 				<span>Body Here</span>
-                <button onclick="alert(window.stake.sum(1,2));">Click me</button>
+				<button onclick="window.stake.onPageLoad">Click me</button>
 			</div>
 		</div>
 	}
