feat: get wallet address

--- a/src/components/body.templ
+++ b/src/components/body.templ
@@ -1,19 +1,12 @@
 package components
 
+import "github.com/hanchon-live/stake/src/components/wallet"
+
 templ Body() {
 	@Layout() {
 		<div class="flex flex-col h-full w-full bg-red-50">
 			<div class="mx-auto my-auto">
-				<span>Body Here</span>
-				<button id="wallets" hx-post="/wallets" hx-swap="innerHTML" hx-target="#walletslist" hx-trigger="EIP6963">
-					Test
-				</button>
-				<div>
-					<div>Wallets</div>
-					<div id="walletslist">
-						Empty
-					</div>
-				</div>
+				@wallet.WalletConnector()
 			</div>
 		</div>
 	}
