feat: update frontend when getting accounts

--- a/src/components/wallet/wallet.templ
+++ b/src/components/wallet/wallet.templ
@@ -8,6 +8,8 @@ templ WalletConnector() {
 				<div id="walletslist">
 					Empty
 				</div>
+                <div>Current Wallet</div>
+                <div id="currentwallet">0x...</div>
 			</div>
 		</div>
 	</div>
